--- a/MusicPlayerWpf/packages.config
+++ b/MusicPlayerWpf/packages.config
@@ -3,4 +3,5 @@
   <package id="MaterialDesignColors" version="3.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="TagLibSharp" version="2.3.0" targetFramework="net472" />
 </packages>
