--- a/MusicPlayerWpf/MusicPlayerWpf.csproj
+++ b/MusicPlayerWpf/MusicPlayerWpf.csproj
@@ -121,6 +121,10 @@
     <Resource Include="logo.ico" />
     <Resource Include="logo.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="tagmp3_Гимн-вышмата.mp3" />
+    <Content Include="Гимн вышмата-2.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.5.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.5.0.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
